# facecluster

./: .gitignore  CMakeLists.txt  README.md  update.sh
CMake/: FindTCLAP.cmake
annotators/: CMakeLists.txt
annotators/face_isolator/: CMakeLists.txt
annotators/face_isolator/include/: face_isolator.h  rectangle.h
annotators/face_isolator/src/: face_isolator.cpp  main.cpp
annotators/feature_extractor/: CMakeLists.txt
annotators/feature_extractor/include/: point_extractor.h
annotators/feature_extractor/src/: main.cpp  point_extractor.cpp
annotators/skin_color_picker/: CMakeLists.txt
annotators/skin_color_picker/include/: skin_hue_averager.h
annotators/skin_color_picker/src/: main.cpp  skin_hue_averager.cpp
common/: CMakeLists.txt
common/include/: opencv_adapters.h  rectangle.h
common/src/: rectangle.cpp
contrib/: CMakeLists.txt
contrib/FindTBB/CMake/FindTBB/: FindTBB.cmake
contrib/asmlib-opencv/src/: CMakeLists.txt
contrib/asmlib-opencv/src/lib/: CMakeLists.txt  asmmodel.cpp  shapemodel.cpp
data/: CMakeLists.txt
samples/: CMakeLists.txt
